Implemented "tweet_to_tensor"

--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -1653,7 +1653,7 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # Process the tweet into a list of words\n",
     "    # where only important words are kept (stop words removed)\n",
-    "    word_l = None\n",
+    "    word_l = process_tweet(tweet)\n",
     "    \n",
     "    if verbose:\n",
     "        print(\"List of words from the processed tweet:\")\n",
@@ -1663,7 +1663,7 @@
     "    tensor_l = []\n",
     "    \n",
     "    # Get the unique integer ID of the __UNK__ token\n",
-    "    unk_ID = None\n",
+    "    unk_ID = vocab_dict[\"__UNK__\"]\n",
     "    \n",
     "    if verbose:\n",
     "        print(f\"The unique integer ID for the unk_token is {unk_ID}\")\n",
@@ -1674,7 +1674,7 @@
     "        # Get the unique integer ID.\n",
     "        # If the word doesn't exist in the vocab dictionary,\n",
     "        # use the unique ID for __UNK__ instead.\n",
-    "        word_ID = None\n",
+    "        word_ID = vocab_dict.get(word,unk_ID)\n",
     "    ### END CODE HERE ###\n",
     "        \n",
     "        # Append the unique integer ID to the tensor list.\n",
@@ -3787,7 +3787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
