--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -1144,7 +1144,7 @@
     "        '''\n",
     "        ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        \n",
-    "        activation = None\n",
+    "        activation = np.maximum(x, 0)\n",
     "\n",
     "        ### END CODE HERE ###\n",
     "        \n",
