--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -1329,7 +1329,7 @@
     "### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "\n",
     "        # Matrix multiply x and the weight matrix\n",
-    "        dense = None \n",
+    "        dense = np.dot(x, self.weights) \n",
     "        \n",
     "### END CODE HERE ###\n",
     "        return dense\n",
@@ -1339,11 +1339,11 @@
     "        \n",
     "### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "        # The input_signature has a .shape attribute that gives the shape as a tuple\n",
-    "        input_shape = None\n",
+    "        input_shape = input_signature.shape\n",
     "\n",
     "        # Generate the weight matrix from a normal distribution, \n",
     "        # and standard deviation of 'stdev'        \n",
-    "        w = None\n",
+    "        w = random.normal(key=random_key, shape=(input_shape[-1],self._n_units))*self._init_stdev\n",
     "        \n",
     "### END CODE HERE ###     \n",
     "        self.weights = w\n",
