--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -1640,27 +1640,27 @@
     "### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # create embedding layer\n",
     "    embed_layer = tl.Embedding(\n",
-    "        vocab_size=None, # Size of the vocabulary\n",
-    "        d_feature=None)  # Embedding dimension\n",
+    "        vocab_size=vocab_size, # Size of the vocabulary\n",
+    "        d_feature=embedding_dim)  # Embedding dimension\n",
     "    \n",
     "    # Create a mean layer, to create an \"average\" word embedding\n",
-    "    mean_layer = None\n",
+    "    mean_layer = tl.Mean(axis = 1)\n",
     "    \n",
     "    # Create a dense layer, one unit for each output\n",
-    "    dense_output_layer = tl.Dense(n_units = None)\n",
+    "    dense_output_layer = tl.Dense(n_units = output_dim)\n",
     "\n",
     "    \n",
     "    # Create the log softmax layer (no parameters needed)\n",
-    "    log_softmax_layer = None\n",
+    "    log_softmax_layer = tl.LogSoftmax()\n",
     "    \n",
     "    # Use tl.Serial to combine all layers\n",
     "    # and create the classifier\n",
     "    # of type trax.layers.combinators.Serial\n",
     "    model = tl.Serial(\n",
-    "      None, # embedding layer\n",
-    "      None, # mean layer\n",
-    "      None, # dense output layer \n",
-    "      None # log softmax layer\n",
+    "      embed_layer, # embedding layer\n",
+    "      mean_layer, # mean layer\n",
+    "      dense_output_layer, # dense output layer \n",
+    "      log_softmax_layer # log softmax layer\n",
     "    )\n",
     "### END CODE HERE ###     \n",
     "    \n",
