Implemented "train_model"

--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -1948,12 +1948,12 @@
     "    '''\n",
     "### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    training_loop = training.Loop(\n",
-    "                                None, # The learning model\n",
-    "                                None, # The training task\n",
-    "                                eval_task = None, # The evaluation task\n",
-    "                                output_dir = None) # The output directory\n",
+    "                                classifier, # The learning model\n",
+    "                                train_task, # The training task\n",
+    "                                eval_task = eval_task, # The evaluation task\n",
+    "                                output_dir = output_dir) # The output directory\n",
     "\n",
-    "    training_loop.run(n_steps = None)\n",
+    "    training_loop.run(n_steps = n_steps)\n",
     "### END CODE HERE ###\n",
     "\n",
     "    # Return the training_loop, since it has the model.\n",
