Implemented "compute_accuracy"

--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -2319,30 +2319,30 @@
     "    # True if the probability of positive sentiment is greater than\n",
     "    # the probability of negative sentiment\n",
     "    # else False\n",
-    "    is_pos =  None\n",
+    "    is_pos =  [x[0] < x[1] for x in preds]\n",
     "\n",
     "    # convert the array of booleans into an array of np.int32\n",
-    "    is_pos_int = None\n",
+    "    is_pos_int = np.array(is_pos, dtype=np.int32)\n",
     "    \n",
     "    # compare the array of predictions (as int32) with the target (labels) of type int32\n",
-    "    correct = None\n",
+    "    correct = is_pos_int == is_pos_int\n",
     "\n",
     "    # Count the sum of the weights.\n",
-    "    sum_weights = None\n",
+    "    sum_weights = np.sum(y_weights)\n",
     "    \n",
     "    # convert the array of correct predictions (boolean) into an arrayof np.float32\n",
-    "    correct_float = None\n",
+    "    correct_float = np.array(correct, dtype=np.float32)\n",
     "    \n",
     "    # Multiply each prediction with its corresponding weight.\n",
-    "    weighted_correct_float = None\n",
+    "    weighted_correct_float = np.multiply(correct_float,y_weights)\n",
     "\n",
     "    # Sum up the weighted correct predictions (of type np.float32), to go in the\n",
     "    # denominator.\n",
-    "    weighted_num_correct = None\n",
-    " \n",
+    "    weighted_num_correct = np.sum(weighted_correct_float)\n",
+    "    \n",
     "    # Divide the number of weighted correct predictions by the sum of the\n",
     "    # weights.\n",
-    "    accuracy = None\n",
+    "    accuracy = weighted_num_correct / sum_weights\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy, weighted_num_correct, sum_weights"
