Implemented "test_model"

--- a/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-1/C3_W1_Assignment.ipynb
@@ -2466,31 +2466,33 @@
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    for batch in generator: \n",
     "        \n",
+    "        tmp_inputs, tmp_targets, tmp_example_weights = tmp_batch\n",
+    "        \n",
     "        # Retrieve the inputs from the batch\n",
-    "        inputs = None\n",
+    "        inputs = tmp_inputs\n",
     "        \n",
     "        # Retrieve the targets (actual labels) from the batch\n",
-    "        targets = None\n",
+    "        targets = tmp_targets\n",
     "        \n",
     "        # Retrieve the example weight.\n",
-    "        example_weight = None\n",
+    "        example_weight = tmp_example_weights\n",
     "\n",
     "        # Make predictions using the inputs\n",
-    "        pred = None\n",
+    "        pred = model(tmp_inputs)\n",
     "        \n",
     "        # Calculate accuracy for the batch by comparing its predictions and targets\n",
-    "        batch_accuracy, batch_num_correct, batch_num_pred = None\n",
+    "        batch_accuracy, batch_num_correct, batch_num_pred = compute_accuracy(pred, targets, example_weight)\n",
     "        \n",
     "        # Update the total number of correct predictions\n",
     "        # by adding the number of correct predictions from this batch\n",
-    "        total_num_correct += None\n",
+    "        total_num_correct += batch_num_correct\n",
     "        \n",
     "        # Update the total number of predictions \n",
     "        # by adding the number of predictions made for the batch\n",
-    "        total_num_pred += None\n",
+    "        total_num_pred += batch_num_pred\n",
     "\n",
     "    # Calculate accuracy over all examples\n",
-    "    accuracy = None\n",
+    "    accuracy = total_num_correct / total_num_pred\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    return accuracy"
