Implemented "line_to_tensor"

--- a/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
@@ -366,16 +366,16 @@
     "    tensor = []\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    # for each character:\n",
-    "    for c in None:\n",
+    "    for c in line:\n",
     "        \n",
     "        # convert to unicode int\n",
-    "        c_int = None\n",
+    "        c_int = ord(c)\n",
     "        \n",
     "        # append the unicode integer to the tensor list\n",
-    "        tensor.append(None)\n",
+    "        tensor.append(c_int)\n",
     "    \n",
     "    # include the end-of-sentence integer\n",
-    "    tensor.append(None)\n",
+    "    tensor.append(EOS_int)\n",
     "    ### END CODE HERE ###\n",
     "\n",
     "    return tensor"
@@ -1336,7 +1336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
