Implemented "data_generator"

--- a/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -94,15 +94,7 @@
     "id": "RVSwzQ5Bwt0m",
     "outputId": "9b51a13e-cf54-457f-e1ea-2574f9d67453"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:tokens_length=568 inputs_length=512 targets_length=114 noise_density=0.15 mean_noise_span_length=3.0 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import trax\n",
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -168,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -178,17 +170,7 @@
     "id": "-zMCe7aJkGwA",
     "outputId": "c0eace05-246a-47d9-9542-f009a4940836"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of lines: 125097\n",
-      "Sample line at position 0 A LOVER'S COMPLAINT\n",
-      "Sample line at position 999 With this night's revels and expire the term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_lines = len(lines)\n",
     "print(f\"Number of lines: {n_lines}\")\n",
@@ -208,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -218,17 +200,7 @@
     "id": "UBO9jI8EkGwE",
     "outputId": "55b55d61-a5b1-4381-ff88-d146071ac671"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of lines: 125097\n",
-      "Sample line at position 0 a lover's complaint\n",
-      "Sample line at position 999 with this night's revels and expire the term\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# go through each line\n",
     "for i, line in enumerate(lines):\n",
@@ -242,18 +214,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of lines for training: 124097\n",
-      "Number of lines for validation: 1000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "eval_lines = lines[-1000:] # Create a holdout validation set\n",
     "lines = lines[:-1000] # Leave the rest for training\n",
@@ -280,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -290,24 +253,7 @@
     "id": "Cc_B8ae3kGwI",
     "outputId": "94eb6798-827a-4494-dec0-7bb84523ce34"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ord('a'): 97\n",
-      "ord('b'): 98\n",
-      "ord('c'): 99\n",
-      "ord(' '): 32\n",
-      "ord('x'): 120\n",
-      "ord('y'): 121\n",
-      "ord('z'): 122\n",
-      "ord('1'): 49\n",
-      "ord('2'): 50\n",
-      "ord('3'): 51\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# View the unique unicode integer associated with each character\n",
     "print(f\"ord('a'): {ord('a')}\")\n",
@@ -341,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -383,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -393,20 +339,7 @@
     "id": "D9Z_vtI7tTcw",
     "outputId": "0423ad21-af3e-4e6d-a558-472f4bf5f964"
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-bc68cad64103>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Testing your output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mline_to_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'abc xyz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-7-4cccdc6d972f>\u001b[0m in \u001b[0;36mline_to_tensor\u001b[0;34m(line, EOS_int)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m### START CODE HERE (Replace instances of 'None' with your code) ###\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# for each character:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0;31m# convert to unicode int\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing your output\n",
     "line_to_tensor('abc xyz')"
@@ -531,56 +464,56 @@
     "    while True:\n",
     "        \n",
     "        # if the index is greater or equal than to the number of lines in data_lines\n",
-    "        if None:\n",
+    "        if index >= len(data_lines):\n",
     "            # then reset the index to 0\n",
-    "            index = None\n",
+    "            index = 0\n",
     "            # shuffle line indexes if shuffle is set to True\n",
     "            if shuffle:\n",
     "                rnd.shuffle(lines_index)\n",
     "            \n",
     "        # get a line at the `lines_index[index]` position in data_lines\n",
-    "        line = None\n",
+    "        line = data_lines[lines_index[index]]\n",
     "        \n",
     "        # if the length of the line is less than max_length\n",
-    "        if None:\n",
+    "        if len(line) < max_length:\n",
     "            # append the line to the current batch\n",
-    "            cur_batch.append(None)\n",
+    "            cur_batch.append(line)\n",
     "            \n",
     "        # increment the index by one\n",
-    "        index += None\n",
+    "        index += 1\n",
     "        \n",
     "        # if the current batch is now equal to the desired batch size\n",
-    "        if None:\n",
+    "        if len(cur_batch) == batch_size:\n",
     "            \n",
     "            batch = []\n",
     "            mask = []\n",
     "            \n",
     "            # go through each line (li) in cur_batch\n",
-    "            for li in None:\n",
+    "            for li in cur_batch:\n",
     "                # convert the line (li) to a tensor of integers\n",
-    "                tensor = None\n",
+    "                tensor = line_to_tensor(li)\n",
     "                \n",
     "                # Create a list of zeros to represent the padding\n",
     "                # so that the tensor plus padding will have length `max_length`\n",
-    "                pad = [0] * (None)\n",
+    "                pad = [0] * (max_length - len(li))\n",
     "                \n",
     "                # combine the tensor plus pad\n",
-    "                tensor_pad = None\n",
+    "                tensor_pad = tensor + pad\n",
     "                \n",
     "                # append the padded tensor to the batch\n",
-    "                batch.append(None)\n",
+    "                batch.append(tensor_pad)\n",
     "\n",
     "                # A mask for  tensor_pad is 1 wherever tensor_pad is not\n",
     "                # 0 and 0 wherever tensor_pad is 0, i.e. if tensor_pad is\n",
     "                # [1, 2, 3, 0, 0, 0] then example_mask should be\n",
     "                # [1, 1, 1, 0, 0, 0]\n",
     "                # Hint: Use a list comprehension for this\n",
-    "                example_mask = None\n",
+    "                example_mask = [0 if t == 0 else 1 for t in tensor_pad]\n",
     "                mask.append(example_mask)\n",
     "               \n",
     "            # convert the batch (data type list) to a trax's numpy array\n",
-    "            batch_np_arr = np.array(None)\n",
-    "            mask_np_arr = np.array(None)\n",
+    "            batch_np_arr = np.array(batch)\n",
+    "            mask_np_arr = np.array(mask)\n",
     "            \n",
     "            ### END CODE HERE ##\n",
     "            \n",
