--- a/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
@@ -729,11 +729,11 @@
     "    \"\"\"\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    model = tl.Serial(\n",
-    "      None, # Stack the ShiftRight layer\n",
-    "      None, # Stack the embedding layer\n",
-    "      None, # Stack GRU layers of d_model units keeping n_layer parameter in mind (use list comprehension syntax)\n",
-    "      None, # Dense layer\n",
-    "      None # Log Softmax\n",
+    "      tl.ShiftRight(mode=mode), # Stack the ShiftRight layer\n",
+    "      tl.Embedding(vocab_size=vocab_size, d_feature=d_model), # Stack the embedding layer\n",
+    "      [tl.GRU(n_units=d_model) for _ in range(n_layers)], # Stack GRU layers of d_model units keeping n_layer parameter in mind (use list comprehension syntax)\n",
+    "      tl.Dense(n_units=vocab_size), # Dense layer\n",
+    "      tl.LogSoftmax() # Log Softmax\n",
     "    )\n",
     "    ### END CODE HERE ###\n",
     "    return model\n"
