Implemented "train_model"

--- a/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
@@ -464,7 +464,7 @@
     "    while True:\n",
     "        \n",
     "        # if the index is greater or equal than to the number of lines in data_lines\n",
-    "        if index >= len(data_lines):\n",
+    "        if index >= num_lines:\n",
     "            # then reset the index to 0\n",
     "            index = 0\n",
     "            # shuffle line indexes if shuffle is set to True\n",
@@ -495,7 +495,7 @@
     "                \n",
     "                # Create a list of zeros to represent the padding\n",
     "                # so that the tensor plus padding will have length `max_length`\n",
-    "                pad = [0] * (max_length - len(li))\n",
+    "                pad = [0] * (max_length - len(tensor))\n",
     "                \n",
     "                # combine the tensor plus pad\n",
     "                tensor_pad = tensor + pad\n",
@@ -950,21 +950,21 @@
     "    \"\"\"\n",
     "    \n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "    bare_train_generator = None\n",
-    "    infinite_train_generator = None\n",
+    "    bare_train_generator = data_generator(batch_size, max_length, lines)\n",
+    "    infinite_train_generator = itertools.cycle(bare_train_generator)\n",
     "    \n",
-    "    bare_eval_generator = None\n",
-    "    infinite_eval_generator = None\n",
+    "    bare_eval_generator = data_generator(batch_size, max_length, eval_lines)\n",
+    "    infinite_eval_generator = itertools.cycle(bare_eval_generator)\n",
     "   \n",
     "    train_task = training.TrainTask(\n",
-    "        labeled_data=None, # Use infinite train data generator\n",
-    "        loss_layer=None,   # Don't forget to instantiate this object\n",
-    "        optimizer=None     # Don't forget to add the learning rate parameter\n",
+    "        labeled_data=infinite_train_generator, # Use infinite train data generator\n",
+    "        loss_layer=tl.CrossEntropyLoss(),   # Don't forget to instantiate this object\n",
+    "        optimizer=trax.optimizers.Adam(0.0005)   # Don't forget to add the learning rate parameter\n",
     "    )\n",
     "\n",
     "    eval_task = training.EvalTask(\n",
-    "        labeled_data=None,    # Use infinite eval data generator\n",
-    "        metrics=[None, None], # Don't forget to instantiate these objects\n",
+    "        labeled_data=infinite_eval_generator,    # Use infinite eval data generator\n",
+    "        metrics=[tl.CrossEntropyLoss(), tl.Accuracy()], # Don't forget to instantiate these objects\n",
     "        n_eval_batches=3      # For better evaluation accuracy in reasonable time\n",
     "    )\n",
     "    \n",
@@ -973,7 +973,7 @@
     "                                  eval_task=eval_task,\n",
     "                                  output_dir=output_dir)\n",
     "\n",
-    "    training_loop.run(n_steps=None)\n",
+    "    training_loop.run(n_steps=n_steps)\n",
     "    \n",
     "    ### END CODE HERE ###\n",
     "    \n",
