Implemented "test_model"

--- a/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-2/C3_W2_Assignment.ipynb
@@ -1084,12 +1084,14 @@
     "        float: log_perplexity of the model.\n",
     "    \"\"\"\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
-    "    total_log_ppx = np.sum(None * None, axis= -1) # HINT: tl.one_hot() should replace one of the Nones\n",
+    "    reshaped_targets = tl.one_hot(target, preds.shape[-1])\n",
+    "    total_log_ppx = np.sum(preds * reshaped_targets, axis= -1) # HINT: tl.one_hot() should replace one of the Nones\n",
     "\n",
-    "    non_pad = 1.0 - np.equal(None, None)          # You should check if the target equals 0\n",
-    "    ppx = None * None                             # Get rid of the padding\n",
+    "    non_pad = 1.0 - np.equal(target, 0)          # You should check if the target equals 0\n",
+    "    ppx = total_log_ppx * non_pad                           # Get rid of the padding\n",
     "\n",
-    "    log_ppx = np.sum(None) / np.sum(None)\n",
+    "    log_ppx = np.sum(ppx) / np.sum(non_pad)\n",
+    "    #log_ppx = np.sum(None) / np.sum(None)\n",
     "    ### END CODE HERE ###\n",
     "    \n",
     "    return -log_ppx"
