Implemented "data_generator"

--- a/nlp-with-sequence-models/week-3/C3_W3_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-3/C3_W3_Assignment.ipynb
@@ -462,47 +462,47 @@
     "             # if the index is greater than or equal to the number of lines in x\n",
     "            if index >= num_lines:\n",
     "                # then reset the index to 0\n",
-    "                index = None\n",
+    "                index = 0\n",
     "                # re-shuffle the indexes if shuffle is set to True\n",
     "                if shuffle:\n",
-    "                    rnd.shuffle(None)\n",
+    "                    rnd.shuffle(lines_index)\n",
     "            \n",
     "            # The current position is obtained using `lines_index[index]`\n",
     "            # Store the x value at the current position into the buffer_x\n",
-    "            buffer_x[i] = None\n",
+    "            buffer_x[i] = x[lines_index[index]]\n",
     "            \n",
     "            # Store the y value at the current position into the buffer_y\n",
-    "            buffer_y[i] = None\n",
+    "            buffer_y[i] = y[lines_index[index]]\n",
     "            \n",
-    "            lenx = None    #length of current x[]\n",
+    "            lenx = len(x[lines_index[index]])    #length of current x[]\n",
     "            if lenx > max_len:\n",
-    "                max_len = None                   #max_len tracks longest x[]\n",
+    "                max_len = lenx                   #max_len tracks longest x[]\n",
     "            \n",
     "            # increment index by one\n",
-    "            index += None\n",
+    "            index += 1\n",
     "\n",
     "\n",
     "        # create X,Y, NumPy arrays of size (batch_size, max_len) 'full' of pad value\n",
-    "        X = None\n",
-    "        Y = None\n",
+    "        X = np.full((batch_size, max_len), pad)\n",
+    "        Y = np.full((batch_size, max_len), pad)\n",
     "\n",
     "        # copy values from lists to NumPy arrays. Use the buffered values\n",
     "        for i in range(batch_size):\n",
     "            # get the example (sentence as a tensor)\n",
     "            # in `buffer_x` at the `i` index\n",
-    "            x_i = None\n",
+    "            x_i = buffer_x[i]\n",
     "            \n",
     "            # similarly, get the example's labels\n",
     "            # in `buffer_y` at the `i` index\n",
-    "            y_i = None\n",
+    "            y_i = buffer_y[i]\n",
     "            \n",
     "            # Walk through each word in x_i\n",
     "            for j in range(len(x_i)):\n",
     "                # store the word in x_i at position j into X\n",
-    "                X[i, j] = None\n",
+    "                X[i, j] = x_i[j]\n",
     "                \n",
     "                # store the label in y_i at position j into Y\n",
-    "                Y[i, j] = None\n",
+    "                Y[i, j] = y_i[j]\n",
     "\n",
     "    ### END CODE HERE ###\n",
     "        if verbose: print(\"index=\", index)\n",
@@ -1232,7 +1232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
