NER notebook completed

--- a/nlp-with-sequence-models/week-3/C3_W3_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-3/C3_W3_Assignment.ipynb
@@ -736,25 +736,25 @@
     "    '''\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "    train_task = training.TrainTask(\n",
-    "      None, # A train data generator\n",
-    "      loss_layer = None, # A cross-entropy loss function\n",
-    "      optimizer = None,  # The adam optimizer\n",
+    "      train_generator,  # A train data generator\n",
+    "      loss_layer = tl.CrossEntropyLoss(), # A cross-entropy loss function\n",
+    "      optimizer = trax.optimizers.Adam(0.01), # The adam optimizer\n",
     "    )\n",
     "\n",
     "    eval_task = training.EvalTask(\n",
-    "      labeled_data = None, # A labeled data generator\n",
-    "      metrics = [None, None], # Evaluate with cross-entropy loss and accuracy\n",
-    "      n_eval_batches = None # Number of batches to use on each evaluation\n",
+    "      labeled_data = eval_generator,  # A labeled data generator\n",
+    "      metrics = [tl.CrossEntropyLoss(), tl.Accuracy()], # Evaluate with cross-entropy loss and accuracy\n",
+    "      n_eval_batches = 10 # Number of batches to use on each evaluation\n",
     "    )\n",
     "\n",
     "    training_loop = training.Loop(\n",
-    "        None, # A model to train\n",
-    "        None, # A train task\n",
-    "        eval_task = None, # The evaluation task\n",
-    "        output_dir = None) # The output directory\n",
+    "        NER, # A model to train\n",
+    "        train_task, # A train task\n",
+    "        eval_task = eval_task, # The evaluation task\n",
+    "        output_dir = output_dir) # The output directory\n",
     "\n",
     "    # Train with train_steps\n",
-    "    training_loop.run(n_steps = None)\n",
+    "    training_loop.run(n_steps = train_steps)\n",
     "    ### END CODE HERE ###\n",
     "    return training_loop"
    ]
@@ -977,14 +977,14 @@
     "    \"\"\"\n",
     "    ### START CODE HERE (Replace instances of 'None' with your code) ###\n",
     "## step 1 ##\n",
-    "    outputs = None\n",
+    "    outputs = np.argmax(pred, axis=2)\n",
     "    print(\"outputs shape:\", outputs.shape)\n",
     "\n",
     "## step 2 ##\n",
-    "    mask = None\n",
+    "    mask = labels != pad\n",
     "    print(\"mask shape:\", mask.shape, \"mask[0][20:30]:\", mask[0][20:30])\n",
     "## step 3 ##\n",
-    "    accuracy = None\n",
+    "    accuracy = np.sum(outputs == labels) / float(np.sum(mask))\n",
     "    ### END CODE HERE ###\n",
     "    return accuracy\n"
    ]
