--- a/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
+++ b/nlp-with-sequence-models/week-4/C3_W4_Assignment.ipynb
@@ -768,41 +768,42 @@
     "        if idx >= len_q:\n",
     "            # if idx is greater than or equal to len_q, set idx accordingly \n",
     "            # (Hint: look at the instructions above)\n",
-    "            idx = None\n",
+    "            idx = 0\n",
     "            # shuffle to get random batches if shuffle is set to True\n",
     "            if shuffle:\n",
     "                rnd.shuffle(question_indexes)\n",
     "        \n",
     "        # get questions at the `question_indexes[idx]` position in Q1 and Q2\n",
-    "        q1 = None\n",
-    "        q2 = None\n",
+    "        q1 = Q1[question_indexes[idx]]\n",
+    "        q2 = Q2[question_indexes[idx]]\n",
     "        \n",
     "        # increment idx by 1\n",
-    "        idx += None\n",
+    "        idx += 1\n",
     "        # append q1\n",
-    "        input1.append(None)\n",
+    "        input1.append(q1)\n",
     "        # append q2\n",
-    "        input2.append(None)\n",
+    "        input2.append(q2)\n",
     "        if len(input1) == batch_size:\n",
     "            # determine max_len as the longest question in input1 & input 2\n",
     "            # Hint: use the `max` function. \n",
     "            # take max of input1 & input2 and then max out of the two of them.\n",
-    "            max_len = None\n",
+    "            max_len = max(max([len(q) for q in input1]),\n",
+    "                          max([len(q) for q in input2]))\n",
     "            # pad to power-of-2 (Hint: look at the instructions above)\n",
-    "            max_len = None\n",
+    "            max_len = 2**int(np.ceil(np.log2(max_len)))\n",
     "            b1 = []\n",
     "            b2 = []\n",
     "            for q1, q2 in zip(input1, input2):\n",
     "                # add [pad] to q1 until it reaches max_len\n",
-    "                q1 = None\n",
+    "                q1 = q1 + [pad] * (max_len - len(q1))\n",
     "                # add [pad] to q2 until it reaches max_len\n",
-    "                q2 = None\n",
+    "                q2 = q2 + [pad] * (max_len - len(q2))\n",
     "                # append q1\n",
-    "                b1.append(None)\n",
+    "                b1.append(q1)\n",
     "                # append q2\n",
-    "                b2.append(None)\n",
+    "                b2.append(q2)\n",
     "            # use b1 and b2\n",
-    "            yield np.array(None), np.array(None)\n",
+    "            yield np.array(b1), np.array(b2)\n",
     "    ### END CODE HERE ###\n",
     "            # reset the batches\n",
     "            input1, input2 = [], []  # reset the batches"
@@ -1743,7 +1744,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
